--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
       overflow-x: hidden;
     }
 
-    /* ===== HERO SECTION ===== */
+    #background-canvas {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      z-index: 0;
+      pointer-events: none;
+      max-width: 100vw !important;
+      max-height: 100vh !important;
+    }
+
     .hero-section {
       min-height: 90vh;
       display: flex;
@@ -120,7 +129,6 @@
       70% { box-shadow: 0 4px 32px #ffe06666, 0 0 0 12px #ffe06611; }
     }
 
-    /* ===== SECTION CONTAINERS ===== */
     .container {
       width: 100%;
       max-width: 1200px;
@@ -130,8 +138,10 @@
       z-index: 2;
     }
 
-    /* ===== WHY SWAPERA ===== */
-    .why-section .section-title {
+    .why-section .section-title,
+    .how-section .section-title,
+    .who-section .section-title,
+    .signup-section .section-title {
       font-size: 2rem;
       font-weight: 700;
       text-align: center;
@@ -140,14 +150,18 @@
       letter-spacing: 0.01em;
       animation: fadeInUp 0.9s both;
     }
-    .why-cards {
+    .how-section .section-title { color: var(--primary);}
+    .who-section .section-title { color: var(--primary);}
+    .signup-section .section-title { color: var(--accent); font-size: 1.8rem;}
+
+    .why-cards, .how-steps, .audience-cards, .signup-form-container {
       display: flex;
       justify-content: center;
       gap: 2rem;
       flex-wrap: wrap;
       margin-bottom: 1.5rem;
     }
-    .why-card {
+    .why-card, .how-step, .aud-card {
       background: var(--gradient-card);
       color: var(--text-main);
       border-radius: var(--border-radius);
@@ -155,77 +169,34 @@
       padding: 2rem 1.2rem 1.5rem 1.2rem;
       min-width: 220px;
       max-width: 330px;
-      flex: 1;
+      flex: 1 1 250px;
       text-align: center;
       transition: transform .17s, box-shadow .17s;
       animation: fadeInUp 1.1s both;
-      opacity: 0;
-      transform: translateY(40px);
-      animation-fill-mode: forwards;
     }
-    .why-card:nth-child(1) { animation-delay: 0.25s; }
-    .why-card:nth-child(2) { animation-delay: 0.5s; }
-    .why-card:nth-child(3) { animation-delay: 0.75s; }
-    .why-card .icon {
+    .how-step { background: var(--bg-card);}
+    .aud-card { display: flex; align-items: center; gap: 1rem; max-width: 220px;}
+    .why-card .icon, .how-step .icon, .aud-card .icon {
       font-size: 2.1rem;
       color: var(--primary);
       margin-bottom: 1rem;
       transition: color .2s, transform .2s;
       display: block;
+      flex-shrink: 0;
     }
-    .why-card:hover {
+    .how-step .icon { color: var(--accent);}
+    .aud-card .icon { font-size: 1.7rem; color: var(--accent); margin-bottom: 0;}
+    .why-card:hover, .how-step:hover, .aud-card:hover {
       transform: translateY(-10px) scale(1.02);
       box-shadow: 0 10px 32px #39c6e7aa;
     }
-    .why-card:hover .icon {
+    .why-card:hover .icon, .how-step:hover .icon, .aud-card:hover .icon {
       color: var(--accent);
       transform: scale(1.14) rotate(-8deg);
     }
-    .why-card p {
+    .why-card p, .how-step .step-desc, .aud-card {
       color: var(--text-sub);
       font-size: 1.07rem;
-    }
-
-    /* ===== HOW IT WORKS ===== */
-    .how-section .section-title {
-      font-size: 2rem;
-      font-weight: 700;
-      text-align: center;
-      color: var(--primary);
-      margin-bottom: 2.7rem;
-      animation: fadeInUp 0.9s both;
-    }
-    .how-steps {
-      display: flex;
-      gap: 2rem;
-      justify-content: center;
-      align-items: flex-start;
-      flex-wrap: wrap;
-    }
-    .how-step {
-      background: var(--bg-card);
-      border-radius: var(--border-radius);
-      box-shadow: var(--shadow);
-      padding: 2rem 1.2rem 1.3rem 1.2rem;
-      min-width: 220px;
-      max-width: 330px;
-      flex: 1;
-      text-align: center;
-      transition: transform .15s, box-shadow .15s;
-      position: relative;
-      animation: fadeInUp 1.1s both;
-      opacity: 0;
-      transform: translateY(40px);
-      animation-fill-mode: forwards;
-    }
-    .how-step:nth-child(1) { animation-delay: 0.25s; }
-    .how-step:nth-child(2) { animation-delay: 0.5s; }
-    .how-step:nth-child(3) { animation-delay: 0.75s; }
-    .how-step .icon {
-      font-size: 2.2rem;
-      color: var(--accent);
-      margin-bottom: 1rem;
-      display: block;
     }
     .how-step .step-title {
       color: var(--primary);
@@ -233,28 +204,7 @@
       font-size: 1.11rem;
       margin-bottom: 0.6rem;
     }
-    .how-step .step-desc {
-      color: var(--text-sub);
-      font-size: 1.01rem;
-    }
-    .how-step:not(:last-child)::after {
-      content: '';
-      position: absolute;
-      right: -1.1rem; top: 50%;
-      width: 24px; height: 3px;
-      background: var(--turquoise);
-      border-radius: 2px;
-      transform: translateY(-50%);
-      opacity: 0.7;
-      display: none;
-    }
-    @media (min-width: 700px) {
-      .how-step:not(:last-child)::after {
-        display: block;
-      }
-    }
 
-    /* ===== VISION & MISSION ===== */
     .vision-section {
       background: linear-gradient(120deg, #15263d 60%, #233a59 100%);
       border-radius: var(--border-radius);
@@ -264,17 +214,8 @@
       max-width: 1000px;
       text-align: center;
       animation: fadeInUp 1.2s both;
-      opacity: 0;
-      transform: translateY(40px);
-      animation-fill-mode: forwards;
-      animation-delay: 1.2s;
     }
-    .vision-section h2 {
-      color: var(--accent);
-      font-size: 1.7rem;
-      font-weight: 700;
-      margin-bottom: 1.2rem;
-    }
+    .vision-section h2 { color: var(--accent); font-size: 1.7rem; font-weight: 700; margin-bottom: 1.2rem;}
     .vision-section .vision,
     .vision-section .mission {
       margin: 1.3rem 0;
@@ -290,65 +231,12 @@
       margin-bottom: 0.7rem;
     }
 
-    /* ===== WHO CAN JOIN ===== */
-    .who-section .section-title {
-      color: var(--primary);
-      font-size: 2rem;
-      font-weight: 700;
-      text-align: center;
-      margin-bottom: 2.2rem;
-      animation: fadeInUp 0.9s both;
-    }
-    .audience-cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1.3rem;
-      margin-bottom: 2rem;
-    }
-    .aud-card {
-      background: var(--gradient-card);
-      border-radius: 18px;
-      box-shadow: var(--shadow);
-      color: var(--text-main);
-      min-width: 140px;
-      max-width: 220px;
-      flex: 1 1 140px;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      padding: 1.3rem 1.1rem;
-      font-size: 1.08rem;
-      font-weight: 500;
-      transition: transform .14s, box-shadow .14s;
-      animation: fadeInUp 1.1s both;
-      opacity: 0;
-      transform: translateY(40px);
-      animation-fill-mode: forwards;
-    }
-    .aud-card:nth-child(1) { animation-delay: 0.25s; }
-    .aud-card:nth-child(2) { animation-delay: 0.35s; }
-    .aud-card:nth-child(3) { animation-delay: 0.45s; }
-    .aud-card:nth-child(4) { animation-delay: 0.55s; }
-    .aud-card:nth-child(5) { animation-delay: 0.65s; }
-    .aud-card:nth-child(6) { animation-delay: 0.75s; }
-    .aud-card .icon {
-      font-size: 1.7rem;
-      color: var(--accent);
-      flex-shrink: 0;
-    }
-    .aud-card:hover {
-      transform: translateY(-8px) scale(1.03);
-      box-shadow: 0 7px 22px #ffe06644;
-    }
-
-    /* ===== BETA NOTICE ===== */
     .beta-notice {
       background: linear-gradient(90deg, #ffe066 10%, #39c6e7 100%);
       color: #232d3a;
       border-radius: 18px;
       box-shadow: 0 4px 22px #ffe06633;
-      padding: 1.5rem 1.5rem 1.2rem 1.7rem;
+      padding: 1.5rem 1.2rem 1.2rem 1.2rem;
       max-width: 700px;
       margin: 2.2rem auto 2.8rem auto;
       font-size: 1.15rem;
@@ -358,22 +246,6 @@
       animation: fadeInUp 1s both;
     }
 
-    /* ===== SIGNUP FORM ===== */
-    .signup-section .section-title {
-      color: var(--accent);
-      font-size: 1.8rem;
-      font-weight: 700;
-      text-align: center;
-      margin-bottom: 2.2rem;
-      animation: fadeInUp 0.9s both;
-    }
-    .signup-form-container {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 2rem;
-      flex-wrap: wrap;
-    }
     .signup-form-box {
       background: var(--bg-card);
       border-radius: var(--border-radius);
@@ -408,23 +280,47 @@
       transition: border .17s, box-shadow .2s;
       font-family: inherit;
       margin-bottom: 0.15rem;
-    }
-    .signup-form input:focus, .signup-form select:focus, .signup-form textarea:focus {
-      outline: none;
-      border: 1.8px solid var(--accent);
-      box-shadow: 0 2px 16px #ffe06633;
-      background: #1c3258;
+      width: 100%;
+      box-sizing: border-box;
     }
     .signup-form textarea {
       min-height: 80px;
       max-width: 100%;
       resize: vertical;
     }
-    .dropdown-multiselect {
+    .signup-form .btn {
+      background: var(--primary);
+      color: #fff;
+      padding: 1rem 2.3rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 700;
+      font-size: 1.11rem;
+      box-shadow: 0 2px 12px #2a529888;
+      letter-spacing: 0.03em;
+      margin-top: 0.7rem;
+      transition: background .18s, color .18s, transform .14s;
+      outline: none;
+      display: inline-block;
       position: relative;
-      user-select: none;
-      margin-bottom: 0.7rem;
+      z-index: 2;
+      width: 100%;
     }
+    .signup-form .btn:focus,
+    .signup-form .btn:active {
+      outline: 2px solid #ffe066;
+      outline-offset: 3px;
+    }
+    .signup-form .btn:hover,
+    .signup-form .btn:active {
+      background: var(--accent);
+      color: var(--primary);
+      transform: scale(1.04);
+      box-shadow: 0 6px 22px #ffe06633;
+    }
+
+    .dropdown-multiselect { position: relative; user-select: none; margin-bottom: 0.7rem; width: 100%;}
     .dropdown-multiselect .dropdown-header {
       padding: 0.9rem 1rem;
       background: #132345;
@@ -437,6 +333,8 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      width: 100%;
+      box-sizing: border-box;
     }
     .dropdown-multiselect.open .dropdown-header,
     .dropdown-multiselect .dropdown-header:focus {
@@ -449,7 +347,8 @@
       position: absolute;
       top: 110%;
       left: 0;
-      width: 100%;
+      width: 100vw;
+      max-width: 420px;
       background: #1c3258;
       border-radius: 12px;
       box-shadow: 0 4px 18px #2a529866;
@@ -458,6 +357,7 @@
       overflow-y: auto;
       margin-top: 3px;
       animation: fadeInUp .25s both;
+      box-sizing: border-box;
     }
     .dropdown-multiselect .dropdown-list label {
       display: flex;
@@ -482,6 +382,9 @@
       color: #ffe066;
       font-size: 1.01rem;
       font-weight: 500;
+      max-width: 75vw;
+      overflow-x: auto;
+      white-space: nowrap;
     }
     .dropdown-multiselect .dropdown-arrow {
       font-size: 1.1em;
@@ -492,38 +395,7 @@
     .dropdown-multiselect.open .dropdown-arrow {
       transform: rotate(-180deg);
     }
-    .signup-form .btn {
-      background: var(--primary);
-      color: #fff;
-      padding: 1rem 2.3rem;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-weight: 700;
-      font-size: 1.11rem;
-      box-shadow: 0 2px 12px #2a529888;
-      letter-spacing: 0.03em;
-      margin-top: 0.7rem;
-      transition: background .18s, color .18s, transform .14s;
-      outline: none;
-      display: inline-block;
-      position: relative;
-      z-index: 2;
-    }
-    .signup-form .btn:focus,
-    .signup-form .btn:active {
-      outline: 2px solid #ffe066;
-      outline-offset: 3px;
-    }
-    .signup-form .btn:hover,
-    .signup-form .btn:active {
-      background: var(--accent);
-      color: var(--primary);
-      transform: scale(1.04);
-      box-shadow: 0 6px 22px #ffe06633;
-    }
 
-    /* ===== FOOTER ===== */
     .footer {
       background: var(--gradient-main);
       color: #fff;
@@ -536,11 +408,6 @@
       margin-top: 3rem;
       position: relative;
       z-index: 2;
-      animation: fadeInUp 1.2s both;
-      opacity: 0;
-      transform: translateY(40px);
-      animation-fill-mode: forwards;
-      animation-delay: 1.6s;
     }
     .footer .footer-brand {
       font-weight: 800;
@@ -580,20 +447,12 @@
       font-weight: 600;
       letter-spacing: 0.01em;
       display: block;
-      animation: fadeInUp 1.3s both;
-      opacity: 0;
-      animation-delay: 2.2s;
-      animation-fill-mode: forwards;
     }
     .footer .footer-social {
       margin-top: 1.3rem;
       display: flex;
       justify-content: center;
       gap: 2.5em;
-      animation: fadeInUp 1.25s both;
-      opacity: 0;
-      animation-delay: 2.0s;
-      animation-fill-mode: forwards;
     }
     .footer .footer-social a {
       color: var(--accent);
@@ -610,13 +469,8 @@
       color: #c7e6ff;
       margin-top: 0.7rem;
       letter-spacing: 0.01em;
-      animation: fadeInUp 1.4s both;
-      opacity: 0;
-      animation-delay: 2.4s;
-      animation-fill-mode: forwards;
     }
 
-    /* ===== ANIMATIONS ===== */
     @keyframes fadeInUp {
       0% { opacity: 0; transform: translateY(32px);}
       100% { opacity: 1; transform: translateY(0);}
@@ -626,37 +480,50 @@
       100% { opacity: 1; transform: translateY(0);}
     }
 
-    /* ===== RESPONSIVE ===== */
-    @media (max-width: 980px){
+    @media (max-width: 1100px){
+      .container { max-width: 98vw; }
+    }
+    @media (max-width: 900px) {
       .why-cards, .how-steps, .audience-cards, .signup-form-container {
         flex-direction: column;
-        gap: 1.2rem;
+        gap: 1.1rem;
         align-items: stretch;
       }
-      .vision-section { padding: 2.2rem 0.5rem; }
-      .signup-form-box { max-width: 100%; }
+      .why-card, .how-step, .aud-card {
+        min-width: unset;
+        max-width: unset;
+        width: 100%;
+        padding: 1.15rem 0.7rem 1rem 0.7rem;
+        border-radius: 14px;
+      }
+      .vision-section { padding: 1.2rem 0.2rem; border-radius: 14px;}
+      .beta-notice { border-radius: 12px; font-size: 1.02rem; padding: 1.1rem 0.7rem 0.9rem 0.7rem;}
+      .hero-section { border-bottom-left-radius: 14px; border-bottom-right-radius: 14px;}
+      .footer { border-top-left-radius: 14px; border-top-right-radius: 14px; }
     }
-    @media (max-width: 700px) {
-      .hero-section { min-height: 75vh; }
-      .platform-name { font-size: 2.1rem; }
-      .hero-section { padding: 0 0.1rem;}
-      .container { padding: 2.2rem 0.5rem 1.3rem 0.5rem;}
-      .vision-section { padding: 1.2rem 0.2rem; }
-      .footer { padding: 1.2rem 0.5rem 0.8rem 0.5rem; font-size: 0.95rem;}
-      .footer .footer-social { gap: 1.3em; }
-    }
-    @media (max-width: 480px) {
-      .hero-section { min-height: 55vh; }
-      .platform-name { font-size: 1.3rem; }
-      .vision-section h2, .who-section .section-title, .how-section .section-title, .why-section .section-title, .signup-section .section-title { font-size: 1.14rem;}
-      .footer .footer-links { flex-direction: column; gap: 0.3rem;}
-      .footer .footer-social { gap: 0.7em; }
+    @media (max-width: 600px) {
+      .hero-section { min-height: 55vh; padding: 0 0.2rem;}
+      .container { padding: 1.3rem 0.15rem 1.1rem 0.15rem;}
+      .platform-name { font-size: 1.45rem; margin-top: 1.1rem;}
+      .hero-section .tagline { font-size: 1.01rem;}
+      .hero-section .subtext { font-size: 0.93rem;}
+      .hero-section .cta-btn { font-size: 1rem; padding: 0.7rem 1.5rem;}
+      .why-section .section-title,
+      .how-section .section-title,
+      .who-section .section-title,
+      .signup-section .section-title { font-size: 1.12rem; margin-bottom: 1.1rem;}
+      .vision-section { font-size: 0.98rem; }
+      .footer { font-size: 0.93rem;}
+      .footer .footer-links { gap: 0.6rem; flex-direction: column;}
+      .footer .footer-social { gap: 0.65em; }
+      .footer .footer-brand { font-size: 1.08rem;}
+      .footer .footer-extra { font-size: 0.98rem; }
     }
   </style>
 </head>
 <body>
   <!-- Animated Interactive Particle Background -->
-  <canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:0;pointer-events:none;"></canvas>
+  <canvas id="background-canvas"></canvas>
 
   <!-- 🎯 SECTION 1: HERO -->
   <section class="hero-section">
@@ -954,21 +821,6 @@
     }
     setupDropdown('teach-dropdown', 'teach-selected');
     setupDropdown('learn-dropdown', 'learn-selected');
-
-    // Fade-in on scroll for cards/sections
-    function fadeInOnScroll() {
-      const fadeEls = document.querySelectorAll('.why-card, .how-step, .aud-card, .vision-section, .footer');
-      const winH = window.innerHeight;
-      fadeEls.forEach(el => {
-        const rect = el.getBoundingClientRect();
-        if (rect.top < winH - 60) {
-          el.style.opacity = 1;
-          el.style.transform = 'translateY(0)';
-        }
-      });
-    }
-    window.addEventListener('scroll', fadeInOnScroll);
-    window.addEventListener('load', fadeInOnScroll);
   </script>
 </body>
 </html>
