--- a/index.html
+++ b/index.html
@@ -2,32 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>SwapEra | Teach What You Know. Learn What You Love.</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
   <style>
-    :root {
-      --gradient-main: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
-      --gradient-card: linear-gradient(120deg, #233a59 0%, #22577a 100%);
-      --blue: #2a5298;
-      --turquoise: #39c6e7;
-      --accent: #ffe066;
-      --bg-dark: #101b2e;
-      --bg-card: #19243a;
-      --shadow: 0 2px 8px rgba(44,153,255,0.13);
-      --text-main: #fff;
-      --text-sub: #c9e5ff;
-      --text-accent: #ffe066;
-      --border-radius: 18px;
-      --transition: 0.3s cubic-bezier(.77,0,.18,1);
-    }
     html, body {
       margin: 0; padding: 0;
       font-family: 'Poppins',sans-serif;
-      background: var(--bg-dark);
-      color: var(--text-main);
+      background: #101b2e;
       min-height: 100vh;
+      color: #fff;
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
@@ -35,106 +20,117 @@
 
     #background-canvas {
       position: fixed;
-      top:0; left:0;
-      width:100vw; height:100vh;
-      z-index:0;
-      pointer-events:none;
-      max-width:100vw!important; max-height:100vh!important;
+      top: 0; left: 0; width: 100vw; height: 100vh;
+      z-index: 0; pointer-events: none;
+      max-width: 100vw !important; max-height: 100vh !important;
     }
 
-    /* HERO */
+    /* ==== GLOBAL CONTAINER ==== */
+    .page-center {
+      width: 100%;
+      max-width: 430px;
+      margin: 0 auto;
+      padding-left: 4vw;
+      padding-right: 4vw;
+      box-sizing: border-box;
+      position: relative;
+      z-index: 2;
+    }
+
+    /* ==== HERO ==== */
     .hero-section {
-      min-height: 60vh;
-      display: flex; flex-direction: column;
-      justify-content: center; align-items: center;
-      padding: 2.5rem 1rem 1.5rem 1rem;
-      background: var(--gradient-main);
-      text-align: center; position: relative; z-index:2;
+      background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
+      border-bottom-left-radius: 18px;
+      border-bottom-right-radius: 18px;
       box-shadow: 0 2px 16px #0002;
-      border-bottom-left-radius: var(--border-radius);
-      border-bottom-right-radius: var(--border-radius);
+      text-align: center;
+      padding: 2.2rem 0 1.7rem 0;
+      margin-bottom: 0.6rem;
+      position: relative;
+      z-index: 2;
       animation: gradientBG 12s ease-in-out infinite alternate;
     }
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       100% { background-position: 100% 50%; }
     }
+    .hero-content {
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      max-width: 430px; margin: 0 auto;
+      padding-left: 4vw; padding-right: 4vw;
+    }
     .platform-name {
-      font-size: 2.1rem; font-weight:900;
-      letter-spacing:0.08em;
+      font-size: 2.1rem; font-weight:900; letter-spacing:0.08em;
       background: linear-gradient(90deg,#ffe066 10%,#fff 50%,#39c6e7 100%);
-      -webkit-background-clip: text; background-clip: text;
-      color: transparent; -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text; background-clip: text; color: transparent; -webkit-text-fill-color: transparent;
       margin-bottom:0.35rem; margin-top:0;
       text-shadow: 0 2px 20px #0003;
+      text-align: center;
+      width: 100%;
     }
-    .tagline { font-size: 1.03rem; font-weight:600; margin-bottom:0.5rem;}
-    .subtext { color: var(--text-accent); font-size:0.94rem; margin-bottom:1.1rem;}
+    .tagline { font-size: 1.07rem; font-weight:600; margin-bottom:0.5rem; text-align: center;}
+    .subtext { color: #ffe066; font-size:0.97rem; margin-bottom:1.1rem; text-align: center;}
     .cta-btn {
       background: #ffe066; color:#0a1627;
       padding: 0.68rem 1.4rem; font-size: 1rem;
       font-weight:700; border:none; border-radius: 2rem;
       cursor:pointer; box-shadow:0 2px 10px #2a529855;
-      transition: var(--transition);
+      transition: 0.3s cubic-bezier(.77,0,.18,1);
       margin-top:0.2rem; outline:none; display:inline-block;
-      z-index:2; position:relative;
     }
     .cta-btn:focus, .cta-btn:active { outline:2px solid #ffe066; outline-offset:2px;}
     .cta-btn:hover { background: #39c6e7; color: #fff; }
 
-    /* SECTION & GRID */
-    .container {
-      width:100%; max-width: 600px;
-      margin:0 auto; padding:1.6rem 0.6rem;
-      position:relative; z-index:2;
+    /* ==== SECTION ==== */
+    .container-section {
+      margin: 0 auto;
+      margin-bottom: 1rem;
+      background: none;
+      padding: 0;
+      text-align: center;
     }
-    .section-title { font-size:1.15rem; font-weight:700; text-align:center; color:var(--accent); margin-bottom:1.2rem; letter-spacing:0.01em;}
-    .how-section .section-title, .who-section .section-title { color:var(--primary); }
+    .section-title { font-size:1.15rem; font-weight:700; color:#ffe066; margin-bottom:1.2rem; letter-spacing:0.01em;}
+    .how-section .section-title, .who-section .section-title { color:#39c6e7;}
     .why-cards, .how-steps, .audience-cards, .signup-form-container {
-      display: flex; flex-direction: column;
-      gap: 0.7rem; align-items: stretch; justify-content: flex-start;
+      display: flex; flex-direction: column; gap: 0.75rem; align-items: center; justify-content: flex-start;
       margin-bottom: 1rem;
     }
     .why-card, .how-step, .aud-card {
-      background: var(--gradient-card);
-      color:var(--text-main);
+      background: linear-gradient(120deg, #233a59 0%, #22577a 100%);
+      color:#fff;
       border-radius:12px;
-      box-shadow: var(--shadow);
+      box-shadow: 0 2px 8px rgba(44,153,255,0.13);
       padding: 1rem 0.7rem 1rem 0.7rem;
-      width:100%; min-width:unset; max-width:unset;
-      text-align:center; font-size:0.97rem;
-      margin:0 auto;
+      width: 100%; max-width: 370px; min-width: unset;
+      text-align: center; font-size: 0.97rem;
     }
-    .how-step { background: var(--bg-card);}
-    .aud-card { display:flex; align-items:center; gap:0.9rem; max-width:100%;}
+    .how-step { background: #19243a;}
+    .aud-card { display:flex; align-items:center; gap:0.7rem; max-width:370px;}
     .why-card .icon, .how-step .icon, .aud-card .icon {
-      font-size: 1.25rem; color:var(--primary); margin-bottom:0.6rem;flex-shrink:0;
+      font-size: 1.35rem; color:#39c6e7; margin-bottom:0.6rem;flex-shrink:0;
     }
-    .how-step .icon { color: var(--accent);}
-    .aud-card .icon { font-size:1.1rem; color:var(--accent);}
-    .why-card:hover, .how-step:hover, .aud-card:hover {
-      box-shadow:0 6px 16px #39c6e7aa;
-    }
-    .why-card p, .how-step .step-desc, .aud-card { color:var(--text-sub); font-size:0.96rem;}
+    .how-step .icon { color: #ffe066;}
+    .aud-card .icon { font-size:1.13rem; color:#ffe066;}
+    .why-card p, .how-step .step-desc, .aud-card { color:#c9e5ff; font-size:0.97rem;}
 
-    /* VISION & BETA */
+    /* ==== VISION & BETA ==== */
     .vision-section, .beta-notice {
       background: linear-gradient(120deg,#15263d 60%,#233a59 100%);
       border-radius:10px; box-shadow:0 4px 16px #39c6e73a;
       padding:1.1rem 0.7rem; margin:1.3rem auto 1.1rem auto;
-      max-width:98vw; font-size:0.99rem; text-align:center;
+      max-width:410px; font-size:0.99rem; text-align:center;
     }
-    .vision-section h2 { color: var(--accent); font-size:1.09rem; font-weight:700; margin-bottom:0.8rem;}
-    .vision-section .mission-title { color: var(--primary); font-size:1.07rem; font-weight:600; margin-top:1.1rem; margin-bottom:0.5rem;}
+    .vision-section h2 { color: #ffe066; font-size:1.09rem; font-weight:700; margin-bottom:0.8rem;}
+    .vision-section .mission-title { color: #39c6e7; font-size:1.07rem; font-weight:600; margin-top:1.1rem; margin-bottom:0.5rem;}
     .beta-notice { background:linear-gradient(90deg,#ffe066 10%,#39c6e7 100%); color:#232d3a; font-size:1.01rem;}
 
-    /* FORM */
+    /* ==== FORM ==== */
     .signup-form-box {
-      background: var(--bg-card); border-radius: 10px; box-shadow: var(--shadow);
-      padding: 1.2rem 0.7rem; max-width:100%; width:100%; margin: 0 auto 1.2rem auto;
+      background: #19243a; border-radius: 10px; box-shadow: 0 2px 8px rgba(44,153,255,0.13);
+      padding: 1.2rem 0.7rem; max-width:370px; width:100%; margin: 0 auto 1.2rem auto;
     }
     .signup-form { display:flex; flex-direction:column; gap:0.7rem;}
-    .signup-form label { font-size:0.99rem; font-weight:500; color:var(--primary); margin-bottom:0.18rem; margin-top:0.15rem; text-align:left;}
+    .signup-form label { font-size:0.99rem; font-weight:500; color:#39c6e7; margin-bottom:0.18rem; margin-top:0.15rem; text-align:left;}
     .signup-form input, .signup-form select, .signup-form textarea {
       padding:0.6rem 0.8rem; border-radius:8px; border:1.2px solid #39c6e7bb;
       font-size:0.97rem; background:#132345; color:#fff;
@@ -142,7 +138,7 @@
     }
     .signup-form textarea { min-height:62px; max-width:100%; resize:vertical;}
     .signup-form .btn {
-      background:var(--primary); color:#fff; padding:0.7rem 1.2rem; border:none;
+      background:#39c6e7; color:#fff; padding:0.7rem 1.2rem; border:none;
       border-radius:2rem; cursor:pointer; font-weight:700; font-size:1rem;
       box-shadow:0 2px 10px #2a529888; letter-spacing:0.03em; margin-top:0.5rem;
       width:100%; transition:background .18s,color .18s,transform .14s; outline:none;
@@ -150,7 +146,7 @@
     .signup-form .btn:focus,
     .signup-form .btn:active { outline:2px solid #ffe066; outline-offset:2px;}
     .signup-form .btn:hover,
-    .signup-form .btn:active { background:var(--accent); color:var(--primary); transform:scale(1.03); }
+    .signup-form .btn:active { background:#ffe066; color:#39c6e7; transform:scale(1.03); }
     .dropdown-multiselect { position:relative; user-select:none; margin-bottom:0.39rem; width:100%;}
     .dropdown-multiselect .dropdown-header {
       padding:0.6rem 0.7rem; background:#132345; border:1.2px solid #39c6e7bb;
@@ -159,12 +155,12 @@
     }
     .dropdown-multiselect.open .dropdown-header,
     .dropdown-multiselect .dropdown-header:focus {
-      border:1.8px solid var(--accent); background:#1c3258; box-shadow:0 2px 12px #ffe06633; outline:none;
+      border:1.8px solid #ffe066; background:#1c3258; box-shadow:0 2px 12px #ffe06633; outline:none;
     }
     .dropdown-multiselect .dropdown-list {
-      position:absolute; top:110%; left:0; width:100vw; max-width:420px;
+      position:absolute; top:110%; left:0; width:100vw; max-width:370px;
       background:#1c3258; border-radius:8px; box-shadow:0 4px 10px #2a529866;
-      z-index:4; max-height:145px; overflow-y:auto; margin-top:2px; animation:fadeInUp .22s both;
+      z-index:4; max-height:130px; overflow-y:auto; margin-top:2px; animation:fadeInUp .22s both;
       box-sizing:border-box;
     }
     .dropdown-multiselect .dropdown-list label {
@@ -177,18 +173,27 @@
     }
     .dropdown-multiselect .selected-options {
       display:inline; color:#ffe066; font-size:0.97rem; font-weight:500;
-      max-width:70vw; overflow-x:auto; white-space:nowrap;
+      max-width:65vw; overflow-x:auto; white-space:nowrap;
     }
     .dropdown-multiselect .dropdown-arrow { font-size:1em; margin-left:0.4em; color:#ffe066; }
     .dropdown-multiselect.open .dropdown-arrow { transform:rotate(-180deg);}
 
-    /* FOOTER */
+    /* ==== FOOTER ==== */
     .footer {
-      background: var(--gradient-main);
+      background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
       color:#fff; padding:1.1rem 0.5rem 0.7rem 0.5rem;
       text-align:center; font-size:0.95rem;
       border-top-left-radius:10px; border-top-right-radius:10px;
       box-shadow:0 -2px 10px #2a529844; margin-top:1.8rem; position:relative; z-index:2;
+    }
+    .footer .footer-inner {
+      max-width: 390px;
+      margin: 0 auto;
+      padding-left: 4vw; padding-right: 4vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
     .footer .footer-brand { font-weight:800; font-size:1rem; letter-spacing:0.04em; color:#ffe066; margin-bottom:0.3rem; display:block;}
     .footer .footer-links {
@@ -208,23 +213,23 @@
       0% { opacity:0; transform:translateY(32px);}
       100% { opacity:1; transform:translateY(0);}
     }
-    @keyframes fadeInDown {
-      0% { opacity:0; transform:translateY(-32px);}
-      100% { opacity:1; transform:translateY(0);}
-    }
   </style>
 </head>
 <body>
 <canvas id="background-canvas"></canvas>
 
-<section class="hero-section">
-  <div class="platform-name">SwapEra</div>
-  <div class="tagline">Teach What You Know. Learn What You Love.</div>
-  <div class="subtext">A skill-sharing platform made for everyone who wants to grow.</div>
-  <a href="#signup" class="cta-btn">Join the Beta</a>
-</section>
+<!-- HERO -->
+<div class="hero-section">
+  <div class="hero-content">
+    <div class="platform-name">SwapEra</div>
+    <div class="tagline">Teach What You Know. Learn What You Love.</div>
+    <div class="subtext">A skill-sharing platform made for everyone who wants to grow.</div>
+    <a href="#signup" class="cta-btn">Join the Beta</a>
+  </div>
+</div>
 
-<section class="container why-section">
+<!-- WHY SWAPERA -->
+<section class="container-section page-center why-section">
   <div class="section-title">Why SwapEra?</div>
   <div class="why-cards">
     <div class="why-card"><span class="icon"><i class="fa-solid fa-hand-holding-heart"></i></span><p>No money required &mdash; just exchange skills</p></div>
@@ -233,7 +238,8 @@
   </div>
 </section>
 
-<section class="container how-section">
+<!-- HOW IT WORKS -->
+<section class="container-section page-center how-section">
   <div class="section-title">How It Works</div>
   <div class="how-steps">
     <div class="how-step"><span class="icon"><i class="fa-solid fa-user-plus"></i></span><div class="step-title">Sign up and list skills</div><div class="step-desc">Tell us what you can teach and what you want to learn.</div></div>
@@ -242,14 +248,16 @@
   </div>
 </section>
 
-<section class="vision-section">
+<!-- VISION & MISSION -->
+<section class="vision-section page-center">
   <h2>🌍 Vision &amp; Mission</h2>
   <div class="vision"><strong>Vision:</strong> To build the world’s first collaborative learning ecosystem where every individual becomes both a teacher and a learner. We envision a future where knowledge is shared freely, skills are swapped with ease, and personal growth is driven by human connection rather than currency.</div>
   <div class="mission-title">Our Mission</div>
   <div class="mission">SwapEra exists to empower people across India to teach what they know and learn what they love — without money as a barrier. By enabling meaningful skill exchanges, we aim to foster a culture of mutual growth, community-led learning, and lifelong curiosity.</div>
 </section>
 
-<section class="container who-section">
+<!-- WHO CAN JOIN -->
+<section class="container-section page-center who-section">
   <div class="section-title">Who Can Join?</div>
   <div class="audience-cards">
     <div class="aud-card"><span class="icon"><i class="fa-solid fa-user-graduate"></i></span>Students</div>
@@ -261,12 +269,14 @@
   </div>
 </section>
 
-<div class="beta-notice">
+<!-- BETA NOTICE -->
+<div class="beta-notice page-center">
   🚀 <b>SwapEra is currently in Beta.</b> We're manually matching users as we develop the full platform.<br>
   <b>Coming up with the New Era of Learning!</b>
 </div>
 
-<section class="container signup-section" id="signup">
+<!-- SIGNUP FORM -->
+<section class="container-section page-center signup-section" id="signup">
   <div class="section-title">Join the Beta Waitlist</div>
   <div class="signup-form-container">
     <div class="signup-form-box">
@@ -350,24 +360,27 @@
   </div>
 </section>
 
+<!-- FOOTER -->
 <footer class="footer">
-  <span class="footer-brand">SwapEra</span>
-  <div class="footer-links">
-    <a href="mailto:hello@swapera.in"><i class="fa-solid fa-envelope"></i> hello@swapera.in</a>
-    <a href="https://instagram.com/swapera.in" target="_blank" rel="noopener"><i class="fab fa-instagram"></i> @swapera.in</a>
-    <a href="#how"><i class="fa-solid fa-circle-question"></i> How it works?</a>
-    <a href="#signup"><i class="fa-solid fa-users"></i> Join the Beta</a>
+  <div class="footer-inner">
+    <span class="footer-brand">SwapEra</span>
+    <div class="footer-links">
+      <a href="mailto:hello@swapera.in"><i class="fa-solid fa-envelope"></i> hello@swapera.in</a>
+      <a href="https://instagram.com/swapera.in" target="_blank" rel="noopener"><i class="fab fa-instagram"></i> @swapera.in</a>
+      <a href="#how"><i class="fa-solid fa-circle-question"></i> How it works?</a>
+      <a href="#signup"><i class="fa-solid fa-users"></i> Join the Beta</a>
+    </div>
+    <div class="footer-social">
+      <a href="https://instagram.com/swapera.in" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="mailto:hello@swapera.in"><i class="fa-solid fa-envelope"></i></a>
+      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+    <div class="footer-extra">
+      <span><i class="fa-solid fa-graduation-cap"></i> Empowering India's knowledge revolution — one swap at a time</span>
+    </div>
+    <div class="copyright">© 2025 SwapEra &nbsp;|&nbsp; All rights reserved.</div>
   </div>
-  <div class="footer-social">
-    <a href="https://instagram.com/swapera.in" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="mailto:hello@swapera.in"><i class="fa-solid fa-envelope"></i></a>
-    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-  </div>
-  <div class="footer-extra">
-    <span><i class="fa-solid fa-graduation-cap"></i> Empowering India's knowledge revolution — one swap at a time</span>
-  </div>
-  <div class="copyright">© 2025 SwapEra &nbsp;|&nbsp; All rights reserved.</div>
 </footer>
 
 <script>
